Доработки после ревью