@@ -2,7 +2,6 @@ package ru.yandex.practicum.filmorate.service;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.dto.FilmDto;
@@ -17,39 +16,38 @@ import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 import java.time.LocalDate;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FilmService {
 
-    @Autowired
-    @Qualifier("filmDbStorage")
-    private FilmStorage filmStorage;
+    private final FilmStorage filmStorage;
 
-    @Autowired
-    private UserService userService;
+    private final UserService userService;
 
-    @Autowired
-    private MpaService mpaService;
+    private final MpaService mpaService;
 
-    @Autowired
-    private GenreService genreService;
+    private final GenreService genreService;
 
     private final Logger log = LoggerFactory.getLogger(FilmService.class);
+
+    public FilmService(@Qualifier("filmDbStorage") FilmStorage filmStorage,
+                       UserService userService,
+                       MpaService mpaService,
+                       GenreService genreService) {
+        this.filmStorage = filmStorage;
+        this.userService = userService;
+        this.mpaService = mpaService;
+        this.genreService = genreService;
+    }
 
     public Collection<FilmDto> findAll() {
         return filmStorage.findAll().stream()
                 .map(FilmMapper::mapToFilmDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Film findById(Long id) {
-        return filmStorage.findOne(id)
-                .orElseThrow(() -> new NotFoundException("Фильм с id = " + id + " не найден"));
-    }
-
-    public FilmDto findFilmById(Long id) {
-        return filmStorage.findOne(id).map(FilmMapper::mapToFilmDto)
+        return filmStorage.findById(id)
                 .orElseThrow(() -> new NotFoundException("Фильм с id = " + id + " не найден"));
     }
 
@@ -57,6 +55,9 @@ public class FilmService {
         if (film.getReleaseDate().isBefore(LocalDate.of(1895, 12, 28))) {
             log.warn("Ошибка валидации - Дата релиза должна быть позже или равна 28 декабря 1895");
             throw new ValidationException("Дата релиза должна быть позже или равна 28 декабря 1895");
+        }
+        if (film.getMpa() == null) {
+            throw new ValidationException("Мпа не задано");
         }
         mpaService.findById(film.getMpa().getId());
         checkGenres(film.getGenres());
@@ -67,8 +68,11 @@ public class FilmService {
 
     private void checkGenres(List<Genre> genres) {
         if (genres != null) {
-            for (Genre genre : genres) {
-                genreService.findById(genre.getId());
+            List<Genre> allGenres = genreService.findAll().stream().toList();
+            long missed = genres.stream()
+                    .filter(genre -> !allGenres.contains(genre)).count();
+            if (missed > 0) {
+                throw new NotFoundException("Жанр не найден");
             }
         }
     }
@@ -82,7 +86,7 @@ public class FilmService {
             log.warn("Ошибка валидации - Дата релиза должна быть позже или равна 28 декабря 1895");
             throw new ValidationException("Дата релиза должна быть позже или равна 28 декабря 1895");
         }
-        Film oldFilm = filmStorage.findOne(newFilm.getId())
+        Film oldFilm = filmStorage.findById(newFilm.getId())
                 .orElseThrow(() -> new NotFoundException("Фильм с id = " + newFilm.getId() + " не найден"));
         checkGenres(newFilm.getGenres());
         Film updatedFilm = filmStorage.update(FilmMapper.updateFilmFields(oldFilm, newFilm));
@@ -96,7 +100,6 @@ public class FilmService {
         filmStorage.addLike(film, user);
     }
 
-
     public void removeLike(Long filmId, Long userId) {
         User user = userService.findById(userId);
         Film film = findById(filmId);
@@ -106,7 +109,6 @@ public class FilmService {
     public List<FilmDto> getTopFilms(Integer count) {
         return findAll().stream()
                 .sorted((f1, f2) -> Long.compare(f2.getLikesCount(), f1.getLikesCount()))
-                .limit(count).collect(Collectors.toList());
+                .limit(count).toList();
     }
-
 }
